fix: improve contrast for max tokens allowed  texts

--- a/src/app/enrollment-grid/enrollment-grid.component.scss
+++ b/src/app/enrollment-grid/enrollment-grid.component.scss
@@ -10,7 +10,7 @@ mat-card {
   margin: .5em .5em;
 
   mat-card-subtitle {
-    opacity: 0.75;
+    opacity: 0.85;
   }
 
   .icon {
@@ -30,7 +30,7 @@ mat-card {
 }
 
 .enroll-info {
-  margin:0;
+  margin: 0;
   opacity: 0.6;
   font-size: 12px;
   text-align: right;
