--- a/src/app/token-list/token-list.component.scss
+++ b/src/app/token-list/token-list.component.scss
@@ -7,8 +7,10 @@ app-token-card {
 }
 
 
-.loading, mat-spinner {
+.loading,
+mat-spinner {
   text-align: center;
+
   mat-spinner {
     margin: 2em auto;
   }
@@ -18,7 +20,7 @@ app-token-card {
 .total-tokens-info {
   margin: 0;
   text-align: right;
-  opacity: 0.7;
+  opacity: 0.8;
   margin-bottom: 5px;
 }
 
@@ -26,6 +28,7 @@ app-token-card {
 .token-limit-info-container {
   padding: 20px 0;
   text-align: center;
+
   .token-limit-title {
     text-transform: uppercase;
     margin-bottom: 12px;
@@ -45,12 +48,14 @@ app-token-card {
   display: flex;
   align-items: center;
   padding: 10px 15px;
+
   p {
     margin: 0;
     margin-left: 10px;
     font-size: 15px;
     line-height: 22px;
   }
+
   mat-icon {
     height: 50px;
     width: 50px;
